setup: cleanup runtime Dockerfile

--- a/scripts/deploy/artifacts/listwebserver/Dockerfile
+++ b/scripts/deploy/artifacts/listwebserver/Dockerfile
@@ -5,10 +5,11 @@ FROM gcc:7.2
 # Install node
 RUN curl -sL https://deb.nodesource.com/setup_8.x -o nodesource_setup.sh
 RUN bash nodesource_setup.sh
-RUN apt-get install -y nodejs
-RUN npm install -g serve
+RUN apt-get install -y \
+        ffmpeg \
+        nodejs
 
-RUN apt-get install -y ffmpeg
+RUN npm install -g serve
 
 ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/usr/local/lib/
 
