--- a/apps/listwebserver/package.json
+++ b/apps/listwebserver/package.json
@@ -29,6 +29,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "read-yaml": "^1.1.0",
+    "sdp-transform": "^2.7.0",
     "socket.io": "^2.0.4",
     "text-encoding": "^0.7.0",
     "uuid": "^3.2.1",
